--- a/assets/style.css
+++ b/assets/style.css
@@ -35,18 +35,6 @@ body.active {
     display: flex;
 }
 
-#dark-box-2 {
-    background-color: var(--primary-color);
-    width: 40px;
-    height: 150vh;
-}
-
-#light-box-2 {
-    background-color: var(--quartenary-color);
-    width: 8px;
-    height: 150vh;
-}
-
 #polygon {
     position: fixed;
     background-color: var(--secondary-color);
@@ -58,6 +46,8 @@ body.active {
     transform: rotate(180deg);
     z-index: -2;
 }
+
+/*------------------------------------ Dark Mode ----------------------------------*/
 
 #icon-toggle {
     padding-top: 20px;
@@ -91,7 +81,7 @@ body.active {
     bottom: 12px;
 }
 
-/*Login page*/
+/*---------------------------------------- Login page ----------------------------------------*/
 
 #dark-box-1 {
     background-color: var(--primary-color);
@@ -163,13 +153,12 @@ body.active {
 }
 
 .input-login:focus {
-    outline: 1;
-    outline-color: var(--primary-color);
+    outline: 0;
 }
 
 .fa-eye-slash {
     position: relative;
-    left: 220px;
+    left: 180px;
     top: -37px;
     color: var(--tertiary-color);
     cursor: pointer;
@@ -177,10 +166,51 @@ body.active {
 
 .fa-eye {
     position: relative;
-    left: 220px;
+    left: 180px;
     top: -37px;
     color: var(--tertiary-color);
     cursor: pointer;
+}
+
+.fa-circle-check {
+    position: relative;
+    color: var(--nonary--color);
+}
+
+.fa-circle-exclamation {
+    position: relative;
+    color: var(--eleventh--color);
+}
+
+.check-input-login {
+    visibility: hidden;
+    left: 255px;
+    top: -40px;
+}
+
+.exclamation-input-login {
+    visibility: hidden;
+    left: 235px;
+    top: -40px;
+}
+
+.span-validation-login {
+    position: absolute;
+    display: none;
+    background-color: var(--octonary--color);
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    padding: 10px;
+    left: 850px;
+    top: 210px;
+    font-size: 13px;
+    color: var(--eleventh--color);
+    box-shadow: 0 0 10px 2px var(--eleventh--color);
+}
+
+.password-validation-login {
+    top: 315px;
 }
 
 .login-button {
@@ -201,7 +231,7 @@ body.active {
 }
 
 .login-card-footer {
-    margin-top: 70px;
+    margin-top: 50px;
     margin-left: 70px;
 }
 
@@ -215,7 +245,7 @@ body.active {
     text-decoration: underline;
 }
 
-/*Modal Signup*/
+/*------------------------------------- Modal Signup ----------------------------------------*/
 
 .modal-signup {
     display: none;
@@ -261,21 +291,16 @@ body.active {
     outline: 0;
 }
 
-.fa-circle-check {
-    position: relative;
+.check-input {
     visibility: hidden;
-    color: var(--nonary--color);
     left: 255px;
     top: -30px;
 }
 
-.fa-circle-exclamation {
-    position: relative;
+.exclamation-input {
     visibility: hidden;
-    color: var(--eleventh--color);
     left: 235px;
     top: -30px;
-    cursor: pointer;
 }
 
 .span-validation {
@@ -290,6 +315,7 @@ body.active {
     top: 208px;
     font-size: 13px;
     color: var(--eleventh--color);
+    box-shadow: 0 0 10px 2px var(--eleventh--color);
 }
 
 .email-validation {
@@ -324,16 +350,22 @@ body.active {
     color: var(--primary-color);
 }
 
-/*The list page*/
+/*------------------------------- The list page -----------------------------------*/
 
-.fa-ellipsis {
-    visibility: hidden;
+#dark-box-2 {
+    background-color: var(--primary-color);
+    width: 40px;
+    height: 150vh;
 }
 
-.fa-ellipsis-vertical {
-    visibility: hidden;
+#light-box-2 {
+    background-color: var(--quartenary-color);
+    width: 8px;
+    height: 150vh;
 }
 
+.fa-ellipsis,
+.fa-ellipsis-vertical,
 #menu {
     visibility: hidden;
 }
@@ -346,12 +378,13 @@ body.active {
 .exit-section {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
 }
 
 .exit-icon {
     padding-top: 30px;
     margin-left: 30px;
-    margin-bottom: 920px;
+    margin-top: 22px;
     color: var(--primary-color);
     cursor: pointer;
     transform: rotate(180deg);
@@ -360,7 +393,7 @@ body.active {
 .welcome-msg {
     position: absolute;
     width: 200px;
-    top: 22px;
+    top: 25px;
     left: 120px;
     color: var(--tertiary-color);
 }
@@ -444,7 +477,7 @@ body.active {
     outline: 0;
 }
 
-/*Modal*/
+/*----------------------------------------- Modal ---------------------------------------------*/
 
 .modal {
     background-color: rgba(0, 0, 0, 0.4);
@@ -565,6 +598,7 @@ body.active {
     color: white;
 }
 
+/*---------------------------------------- Modal Trash -----------------------------------------w*/
 
 .modal-trash {
     display: none;
@@ -611,7 +645,7 @@ body.active {
     color: var(--octonary--color);
 }
 
-/* Table */
+/*--------------------------------------------- Table -----------------------------------------*/
 .table-content {
     width: 950px;
     margin-top: 50px;
@@ -658,25 +692,28 @@ td.active {
     color: var(--eleventh--color) !important;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
+/*-------------------------------------- Media query -------------------------------------------*/
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
 
 
+    #icon-toggle {
+        left: 300px;
+    }
+
+    #icon-moon {
+        bottom: 12px;
+        left: -25px;
+    }
+
+    #icon-sun {
+        bottom: 12px;
+        left: -63px;
+    }
+
     #dark-box-1 {
         background-color: var(--primary-color);
-        width: 40px;
+        width: 25px;
         height: 100vh;
     }
 
@@ -685,47 +722,102 @@ td.active {
         width: 8px;
         height: 100vh;
     }
-    
+
+    /*----------------------- Login Page ---------------------------------------*/
     .content-login {
         padding: 50px;
-        padding-top: 60px;
-        display: flex;
+        padding-top: 30px;
     }
 
     .content-login {
-        padding: 30px;
+        padding-left: 10px;
         padding-top: 60px;
-        display: flex;
     }
 
     .login-card {
         position: relative;
-        margin-left: 0px;
-        top: 100px;
-        left: -180px;
+        width: 300px;
+        height: 400px;
+        margin-top: 150px;
+        left: -400px;
     }
 
     .profile-circle {
-        left: 115px;
+        width: 120px;
+        height: 120px;
+        left: 90px;
         top: -60px;
     }
 
+    .check-input-login {
+        position: relative;
+        top: -40px !important;
+    }
+
+    .exclamation-input-login {
+        position: relative;
+        top: -40px !important;
+    }
+
+    .span-validation-login {
+        height: 20px;
+        padding-left: 10px;
+        padding-top: 0px;
+        left: 50px;
+        top: 145px;
+    }
+
+    .password-validation-login {
+        top: 248px;
+    }
+
+    .fa-eye-slash,
+    .fa-eye {
+        left: 130px;
+        top: -37px;
+    }
+
+    .login-button {
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+
+    .login-card-footer {
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    /*-------------------------- Modal Signup ------------------------------------*/
+
     #modal-signup-content {
         position: relative;
+        width: 300px;
+        height: 400px;
         margin-left: 0px;
         top: 100px;
-        left: 115px;
+        left: 60px;
+    }
+
+    .fa-circle-check {
+        left: 205px;
+        top: -30px;
+    }
+
+    .fa-circle-exclamation {
+        left: 185px;
+        top: -30px;
     }
 
     .span-validation {
-        width: 250px;
+        width: 240px;
         height: 20px;
         padding: 0px;
         padding-left: 10px;
-        left: 50px;
+        left: 30px;
         top: 140px;
         font-size: 10px;
         color: var(--eleventh--color);
+        text-align: center;
     }
 
     .email-validation {
@@ -736,7 +828,22 @@ td.active {
         top: 325px;
     }
 
-    /*The list page*/
+    .submit-signup,
+    .cancel-signup {
+        margin-top: 0px;
+        margin-right: 30px;
+    }
+
+    /*-------------------------------- The list page --------------------------------------*/
+
+    #dark-box-2 {
+        width: 40px;
+    }
+
+    .container-list-page {
+        padding-left: 10px;
+        padding-top: 60px;
+    }
 
 
     .fa-ellipsis {
@@ -753,24 +860,8 @@ td.active {
         color: var(--octonary--color);
     }
 
-    #icon-toggle {
-        left: 450px;
-    }
-
-    #icon-moon {
-        bottom: 35px;
-        left: 32px;
-    }
-
-    #icon-sun {
-        bottom: 60px;
-        left: 12px;
-    }
-
-    .exit-icon {
-        position: relative;
-        bottom: 350px;
-        left: 2px;
+    .exit-section {
+        display: none;
     }
 
     .welcome-msg {
@@ -834,16 +925,22 @@ td.active {
         display: none;
     }
 
-    /*Modal*/
+    .exit-icon-menu {
+        color: var(--octonary--color);
+        transform: rotate(180deg);
+        position: absolute;
+        left: 20px;
+        top: 620px;
+        cursor: pointer;
+    }
+
+    /*-------------------------------------- Modal --------------------------------------*/
 
     .modal-content {
-        width: 400px;
+        width: 380px;
         height: 540px;
         margin-top: 135px;
-        margin-left: 70px;
-        padding-top: 40px;
-        padding-left: 60px;
-        padding-right: 60px;
+        margin-left: 20px;
     }
 
     .modal-trash-content {
@@ -851,13 +948,24 @@ td.active {
         margin-left: 70px;
     }
 
-    /*Table*/
+    /*-------------------------------------- Table ---------------------------------------*/
 
     .table-content {
         position: relative;
-        width: 430px;
+        width: 450px;
         margin-top: 30px;
         right: 60px;
         z-index: -1;
+    }
+
+
+    .fa-pen-to-square {
+        color: var(--tertiary-color);
+        cursor: pointer;
+    }
+
+    .fa-trash {
+        color: var(--quartenary-color);
+        cursor: pointer;
     }
 }
